<resources>
    <string name="app_name">ServiceBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="machine_name_add_prompt">Machine name</string>
    <string name="prod_year_prompt"> Production year</string>
    <string name="odometer_prompt">Odometer</string>
    <string name="machine_make_prompt">Make</string>
    <string name="machine_model_prompt">Model</string>
    <string name="add_photo_prompt">Add photo</string>
    <string name="engine_oil_filter">Engine oil filter</string>
    <string name="engine_oil">Engine oil</string>
    <string name="transmission_oil">Transmission oil</string>
    <string name="transmission_oil_filter">Transmission oil filter</string>
    <string name="air_filter">Air filter</string>
    <string name="title_activity_login">Sign in</string>


    <string-array name="default_service_points">
        <item>Engine oil filter</item>
        <item>Engine oil</item>
        <item>Transmission oil</item>
        <item>Transmission oil filter</item>
        <item>Engine air filter</item>
        <item>Cab air filter</item>
        <item>Coolant fluid</item>
        <item>Fuel filter(s)</item>
        <item>Hydraulic oil filter(s)</item>
        <item>Hydraulic oil</item>
        <item>Wiper blades</item>
        <item>Front tires</item>
        <item>Rear tires</item>
        <item>Differential oil - front</item>
        <item>Differential oil - rear</item>
        <item>Transfer case oil</item>
        <item>Grease</item>
    </string-array>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loginOrRegister">Log in or register</string>
    <string name="login">Login</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="unregistered">You have to be logged in to access this section</string>
</resources>
